apps/base/aj4democracy/aj4democracy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: aj4democracy
  namespace: default
  labels:
    app: aj4democracy
    app.kubernetes.io/name: ajd-site

spec:
  replicas: 1
  selector:
    matchLabels:
      app: aj4democracy
  template:
    metadata:
      labels:
        app: aj4democracy
        app.kubernetes.io/name: ajd-site
    spec:
      containers:
        - name: aj4democracy
          image: ghcr.io/serubin/ajd-site:2026.9.2
          ports:
            - name: web
              containerPort: 80
