apps/base/aj4democracy/aj4democracy.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aj4democracy
  namespace: default

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: aj4democracy
